syntax = "proto3";

package go.micro.srv.passport;

//  api/passport.proto 定义了 handler 对应的处理接口和字段

service Passport {
	rpc Sms(Request) returns (Response) {}
	rpc SmsLogin(SmsLoginRequest) returns (SmsLoginResponse) {}
	rpc Login(LoginRequest) returns (LoginResponse) {}
	rpc OAuthLogin(OAuthLoginRequest) returns (OAuthLoginResponse) {}
	rpc SetPwd(SetPwdRequest) returns (SetPwdResponse) {}
	rpc AuthToken(AuthTokenRequest) returns (AuthTokenResponse) {}
	rpc AuthCookie(AuthCookieRequest) returns (AuthCookieResponse) {}
}

message TokenInfo {
	string token = 1;
	string refresh_token = 2;
	int64 expires_at = 3;
}

message Request {
	string mobile = 1;
}

message Response {
	string code = 1;
}

message SmsLoginRequest {
    int32 appid = 1;
    int32 plat = 2;
	string mobile = 3;
	string code = 4;
}

message SmsLoginResponse {
	TokenInfo token_info = 1;
}

message LoginRequest {
    int32 appid = 1;
    int32 plat = 2;
	string mobile = 3;
	string passwd = 4;
}

message LoginResponse {
	TokenInfo token_info = 1;
}

message OAuthLoginRequest {
	string platform = 1;
	string code = 2;
}

message OAuthLoginResponse {
	TokenInfo token_info = 1;
}

message SetPwdRequest{
	string passwd = 1;
}

message SetPwdResponse{
	TokenInfo token_info = 1;
}

message AuthTokenRequest {
}

message AuthTokenResponse {
    int32 appid = 1;
    int64 uid = 2;
    int32 plat = 3;
}

message AuthCookieRequest {
    string Cookie = 1;
}

message AuthCookieResponse {
    int32 appid = 1;
    int64 uid = 2;
    int32 plat = 3;
}
